--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.google.android.gms:play-services:7.8.0'
     compile 'com.android.support:support-v4:23.0.0'
+    compile 'com.squareup.okhttp:okhttp:2.7.0'
 }
