add slide-in side menu.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,16 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
         </activity>
-        <activity
-            android:name=".WebViewLauncher"
-            android:label="@string/title_activity_main_webViewLauncher" >
+        <activity android:name=".DrawerActivity"
+            android:label="DrawerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".WebViewLauncher"
+            android:label="@string/title_activity_main_webViewLauncher" >
         </activity>
         <service android:name=".UploadService"></service>
     </application>
