--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:hardwareAccelerated="true">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
-        </activity>
+        android:hardwareAccelerated="true"
+        android:logo="@drawable/common_signin_btn_icon_light">
         <activity android:name=".DrawerActivity"
             android:label="DrawerActivity">
             <intent-filter>
