--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:7.8.0'
     compile 'com.android.support:support-v4:23.0.0'
     compile 'com.squareup.okhttp:okhttp:2.7.0'
+    compile 'org.mozilla:rhino:1.7.7'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
 }
