--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dell.myapplication" >
+    package="com.example.dell.myapplication">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -8,28 +8,38 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme"
         android:hardwareAccelerated="true"
-        android:logo="@drawable/common_signin_btn_icon_light">
-        <activity android:name=".DrawerActivity"
+        android:label="@string/app_name"
+        android:logo="@drawable/common_signin_btn_icon_light"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".DrawerActivity"
             android:label="DrawerActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity
             android:name=".WebViewLauncher"
-            android:label="@string/title_activity_main_webViewLauncher" >
+            android:label="@string/title_activity_main_webViewLauncher"></activity>
+
+        <service android:name=".UploadService" />
+
+        <activity
+            android:name="com.example.dell.myapplication.EasyTouchActivity"
+            android:label="@string/title_activity_main" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <service android:name=".UploadService"></service>
+
+        <service android:name="com.example.dell.myapplication.AuxiliaryService" />
     </application>
 
 </manifest>
